# flowprog

./: .gitignore  CHANGELOG.md  JAX_BACKEND_ANALYSIS.md  README.md  dodo.py  environment.yml  pyproject.toml  test_comparison_summary.py  test_dead_code_elimination.py  test_dependency_tracking.py  test_intermediate_elimination.py  test_intermediate_inspection.py  test_jax_backend.py  test_jax_dce.py  test_jax_dce_extreme.py  test_jax_graph_assembly.py  test_jax_optimal_composition.py  test_jax_tracing_overhead.py  test_multiple_models.py  test_namespace.py  test_numpy_vs_jax_when.py  test_serialization.py
benchmarks/: benchmark.py  plot_results.py
benchmarks/petrochem/: README.md  definitions.py  example_export_standalone.py  model.py  model_data.json  model_fertilisers.py  model_polymers.py  regenerate_results.py  run_benchmark.py  structure.py  test_conservation.py  test_migration.py  utils.py
benchmarks/results/: case_a_bw_20260430_063850.csv  case_a_chain_20260430_063850.csv  case_a_fan_20260430_063850.csv  case_a_scipy_20260430_063850.csv  case_b_20260430_063850.csv
docs/: _config.yml  _toc.yml  advanced-patterns.md  api-exchanges.md  api-load-from-rdf.md  api-model.md  api.md  intro.md  milp_transformation.md  serialisation.md  theory.md  time-travel-debugger.md  visualization.md  vue-architecture-quick-ref.md  vue-migration-plan.md
examples/: README.md  milp_calibration_example.py  visualize_demo.py
model/: Changes over time.ipynb  Test model from RDF.ipynb  model.ttl  repl_load_model.ipy
src/flowprog/: model.py  (+11 more)
system-definitions/: _config.yml  _config_extract_rdf.yml  structure.md
tests/: INTEGRATION_TEST_STATUS.md  __init__.py  conftest.py  model_strategies.py  test_activities.py  test_allocation.py  test_boundary_processes.py  test_compilers.py  test_elementary_exchanges.py  test_imperative_model.py  test_markdown_backend.py  test_milp_integration.py  test_milp_transform.py  test_numpyro_backend.py  test_numpyro_compiler.py  test_numpyro_utils.py  test_old_model_compatibility.py  test_passthrough.py  test_properties.py  test_reporting.py  test_reporting_numpyro.py  test_serialisation.py  test_serialisation_properties.py  test_user_model_template.py
(+83 files in other folders)
