[tool.poetry]
name = "flowprog"
authors = [
    "Rick Lupton <mail@ricklupton.name>",
]
description = "Define material flows models as programs"
readme = "README.md"
license = "MIT"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
sympy = "^1.11.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
hypothesis = "^6.70.0"

[tool.poetry.group.examples.dependencies]
jupyterlab = "^3.6.1"
ipysankeywidget = "^0.5.0"
sphinx-probs-rdf = "^0.3.0"
doit = "^0.36.0"
jupytext = "^1.14.0"
jupyter-book = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
