[tool.poetry]
name = "flowprog"
authors = [
    "Rick Lupton <mail@ricklupton.name>",
]
description = "Define material flows models as programs"
readme = "README.md"
license = "MIT"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
sympy = "^1.11.1"
pandas = "^2.2.0"
# TODO: add appropriate rdflib dependence

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
hypothesis = "^6.70.0"
jupyter-book = "^0.15.0"
jupyterlab = "^3.6.1"
ipysankeywidget = "^0.5.0"
sphinx-probs-rdf = "^0.4.1"
jupytext = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
