[project]
name = "flowprog"
version = "0.1.0"
description = "Define material flows models as programs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Rick Lupton", email = "mail@ricklupton.name"},
]
dependencies = [
    "sympy>=1.11.1",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
numpyro = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpyro>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "hypothesis>=6.70.0",
    "jupyter-book>=0.15.0",
    "jupyterlab>=3.6.1",
    "ipysankeywidget>=0.5.0",
    "sphinx-probs-rdf>=0.4.1",
    "jupytext>=1.14.0",
    "arviz>=0.15",
    "matplotlib>=3.5",
    "rdflib>=6.0",
    "flowprog[numpyro]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
